# backlink-finder

./: .gitignore  COSTS.md  Dockerfile  MARKETING_UPDATE_PROMPT.md  backlinks.db  cdp_auth.py  check_conversion.sh  convert_parquet.py  convert_parquet_prod.py  convert_parquet_v2.py  crawler.py  entrypoint.sh  fly.toml  healthcheck.sh  ingest_ccwg.py  main.py  pyproject.toml  upload_parquet.sh  x402_polish.py
.github/workflows/: add-cert.yml  check-cert.yml  test.yml
.well-known/: x402.json
mcp/: README.md  debug-facilitator.mjs  debug-pay.mjs  index.mjs  package-lock.json  package.json  test.mjs
static/: enrichment.html  index.html
tests/: conftest.py  test_authority_score.py  test_ccwg_ingest.py  test_email_cache.py  test_endpoint_catalog.py  test_endpoints.py  test_monthly_usage.py  test_validate_domain.py  test_x402_polish.py
