[project]
name = "backlink-api"
version = "0.1.0"
description = "Backlink finder API with x402 micropayments"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "x402[fastapi,evm]>=2.8",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
