[project]
name = "backlink-api"
version = "0.1.0"
description = "Backlink finder API with x402 micropayments"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "x402[fastapi,evm]>=2.8,<2.9",
    "python-dotenv>=1.0",
    "duckdb>=1.2",
    "httpx>=0.27",
    "PyJWT[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Service, not a library — no installable package. Without this, setuptools
# auto-discovery trips on the top-level mcp/ and static/ directories.
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
